--- a/public/edit-form/style.css
+++ b/public/edit-form/style.css
@@ -29,7 +29,6 @@
   height: 50px;
   min-height: 50px;
   resize: vertical;
-
 }
 
 .question-input {
@@ -106,8 +105,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
-  order: 99999;
 }
 
 .new-question button {
@@ -171,10 +168,8 @@
   color: #6e6e6e52;
 }
 
-
-
 .delete-icon {
-  --color:#ffe5e5;
+  --color: #ffe5e5;
   width: 20px;
   height: 20px;
 
@@ -201,8 +196,69 @@
   left: 0;
   bottom: 0;
 
-
   transform: translateX(-100%);
   border: 10px solid transparent;
   border-right-color: var(--color);
+}
+
+.qr-code {
+  order: 999999999;
+}
+
+#qrcode {
+  margin: 0 auto;
+}
+
+.url {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 500px;
+
+  background: #eee;
+
+  border-radius: 10px
+}
+
+.url-text {
+  width: 100%;
+  overflow-x: scroll;
+  white-space: nowrap;
+  padding: 5px;
+
+  direction: ltr;
+  background: transparent;
+  border: 2px solid transparent;
+}
+
+.copy-btn {
+  height: 100%;
+  padding: 5px 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--blue);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-direction: row-reverse;
+  border: 2px solid;
+  white-space: nowrap;
+  /* border-right: none; */
+  background: transparent;
+
+  cursor: pointer;
+
+  transition: scale 0.2s ease-in-out;
+}
+
+.copy-btn.copied {
+  --blue: #03a800;
+}
+.copy-btn i {
+  color: inherit;
 }
